<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="default_time" translatable="false">0:00</string>
    <string name="upper_folder" translatable="false">..</string>
    <string name="artist_time" translatable="false">%s • %s</string>
    <string name="app_name">液态音乐</string>
    <string name="home_menu_search">Search</string>
    <string name="home_menu_settings">Settings</string>
    <string name="home_menu_shuffle">Shuffle all</string>
    <string name="home_menu_refresh">Refresh</string>
    <string name="category_songs">Songs</string>
    <string name="category_albums">Albums</string>
    <string name="category_artists">Artists</string>
    <string name="category_genres">Genres</string>
    <string name="category_playlists">Playlists</string>
    <string name="unknown_artist">Unknown artist</string>
    <string name="category_dates">Dates</string>
    <plurals name="songs">
        <item quantity="one">%d Song</item>
        <item quantity="other">%d Songs</item>
    </plurals>
    <plurals name="albums">
        <item quantity="one">%d Album</item>
        <item quantity="other">%d Albums</item>
    </plurals>
    <plurals name="artists">
        <item quantity="one">%d Artist</item>
        <item quantity="other">%d Artists</item>
    </plurals>
    <plurals name="items">
        <item quantity="one">%d Item</item>
        <item quantity="other">%d Items</item>
    </plurals>
    <plurals name="folders_plural">
        <item quantity="one">%d Folder</item>
        <item quantity="other">%d Folders</item>
    </plurals>
    <string name="follow_system">Follow system</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="sort_by_size">Size</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_artist">Artist</string>
    <string name="sort_by_album">Album</string>
    <string name="sort_by_album_artist">Album artist -> title</string>
    <string name="dismiss">Dismiss</string>
    <string name="unknown_genre">Unknown genre</string>
    <string name="unknown_year">Unknown year</string>
    <string name="refreshed_songs">Refreshed %1$d songs</string>
    <string name="search">Search</string>
    <string name="search_query">Search: %s</string>
    <string name="share">Share</string>
    <string name="settings_app_name">App name</string>
    <string name="settings_contributors">Contributors</string>
    <string name="play_next">Play next</string>
    <string name="go_to_album">Go to album</string>
    <string name="go_to_artist">Go to artist</string>
    <string name="details">Details</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat_mode">Repeat mode</string>
    <string name="unknown_playlist">Unknown playlist</string>
    <string name="gramophone_crashed" translatable="false">Crash log</string>
    <string name="crash_gramophone_version" translatable="false">Gramophone version</string>
    <string name="crash_phone_model" translatable="false">Model</string>
    <string name="crash_phone_brand" translatable="false">Brand</string>
    <string name="crash_sdk_level" translatable="false">SDK Level</string>
    <string name="crash_time" translatable="false">Time</string>
    <string name="crash_rtype" translatable="false">Release type</string>
    <string name="settings_category_appearance">Appearance</string>
    <string name="album_artist">Album artist</string>
    <string name="unknown_version">Unknown version</string>
    <string name="settings_version">Version</string>
    <string name="dialog_title">Title</string>
    <string name="dialog_artist">Artist</string>
    <string name="settings_category_behavior">Behavior</string>
    <string name="settings_mediastore_filter">Song minimum length (seconds)</string>
    <string name="settings_repository">Repository</string>
    <string name="dialog_album">Album</string>
    <string name="dialog_genre">Genre</string>
    <string name="dialog_album_artist">Album artist</string>
    <string name="dialog_track_number">Track number</string>
    <string name="dialog_year">Year</string>
    <string name="dialog_path">Path</string>
    <string name="unknown_album">Unknown album</string>
    <string name="recently_added">Recently added</string>
    <string name="folders">Folders</string>
    <string name="settings_app_theme">App theme</string>
    <string name="natural_order">Natural order</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="layout">Display</string>
    <string name="home_menu_equalizer">Equalizer</string>
    <string name="equalizer_not_found">Equalizer not found!</string>
    <string name="compact_list">List (compact)</string>
    <string name="check_for_updates">Check our channel for updates!</string>
    <string name="settings_default_progress_bar">Default progress bar</string>
    <string name="settings_default_progress_bar_summary">Enable material styled progress bar</string>
    <string name="opensource_info">Open-sourced under GPL-3.0\nCopyright %s</string>
    <string name="playlist_favourite">Favourites</string>
    <string name="settings_contributors_click">%s (click for more!)</string>
    <string name="now_playing">Now playing</string>
    <string name="settings_content_based_color_summary">Enable album based color generation</string>
    <string name="settings_content_based_color">Content based colors</string>
    <string name="settings_package_type">Package type</string>
    <string name="no_lyric_found">No lyric found</string>
    <string name="dialog_disc_number">Disc number</string>
    <string name="unknown_title">Unknown title</string>
    <string name="filesystem">Filesystem</string>
    <string name="dialog_mime">MIME type</string>
    <string name="dialog_duration">Duration</string>
    <string name="settings_title_center">Centered title</string>
    <string name="settings_title_center_summary">Use centered title for full player</string>
    <string name="settings_player_ui">Player UI</string>
    <string name="settings_player_ui_summary">Full player UI, lyrics</string>
    <string name="settings_color_accuracy_summary">Make color generation accurate</string>
    <string name="settings_color_accuracy">Color accuracy</string>
    <string name="settings_lyrics_bold">Bold lyrics</string>
    <string name="settings_lyrics_bold_summary">Use a heavier font weight for lyrics</string>
    <string name="settings_lyrics_center">Center alignment</string>
    <string name="settings_lyrics_center_summary">Use center alignment for lyrics</string>
    <string name="settings_category_misc">Misc</string>
    <string name="settings_preference_category_application">Application</string>
    <string name="settings_crash_application">Crash application</string>
    <string name="settings_crash_application_summary">Crash-O-Matic 3000</string>
    <string name="settings_trim_lyrics">Remove spaces around lyrics</string>
    <string name="settings_preference_category_home">Home screen</string>
    <string name="tab_order">Configure tab order</string>
    <string name="tab_order_summary">The app will show the first tab on startup. Tabs after the divider will be hidden.</string>
    <string name="play_all">Play all</string>
    <string name="shuffle_all">Shuffle all</string>
    <string name="sort">Sort</string>
    <string name="scroll_to_albums">Scroll to albums</string>
    <string name="scroll_to_songs">Scroll to songs</string>
    <string name="settings_lyrics_ui">Enable new lyric UI</string>
    <string name="settings_lyrics_ui_summary">Experimental UI to display word-by-word lyric with advanced features</string>
    <string name="settings_status_bar_lyrics_title">Status bar lyrics</string>
    <string name="settings_status_bar_lyrics_summary">Enable MeiZu method of displaying lyrics in status bar (only available on some devices)</string>
    <string name="settings_notification_lyrics_title">Notification lyrics</string>
    <string name="settings_notification_lyrics_summary">Display lyrics as the notification title and artist - title as subtitle</string>
    <string name="settings_trim_lyrics_summary">Spaces before the first letter or after the end of a lyric line may have artistic value. If you disagree, you can turn on this toggle to remove these spaces automatically.</string>
    <string name="settings_lyrics_no_animation">Disable animations</string>
    <string name="settings_lyrics_no_animation_summary">Disable all line transition lyric animations</string>
    <string name="what_were_you_doing">What were you doing in Gramophone when this crash happened? Please add as many details as possible to increase the chances of me being able to fix the problem.\n\nPlease note that English is preferred for bug reports, but I will try to use machine translation if you send bug reports in another language.</string>
    <string name="settings_export_logs">Export app logs</string>
    <string name="settings_translation_auto_word">Auto-animate translations</string>
    <string name="settings_translation_auto_word_summary">Apply linear gradient to translation lines in word-synced lyric playback if translations do not have word-sync metadata</string>
    <string name="enter_msg_for_dev_here">Enter message for developer here</string>
    <string name="log_attachment">Logs will be sent as attachment automatically</string>
    <string name="create_playlist">Create playlist…</string>
    <string name="settings_audio_offload">Audio offload (saves battery)</string>
    <string name="settings_pure_dark">Pure black in dark theme</string>
    <string name="settings_pure_dark_summary">A theme where all surfaces in the app are pure black (may cause black crush on OLED displays)</string>
    <string name="settings_replaygain">ReplayGain</string>
    <string name="settings_replaygain_mode">Mode</string>
    <string name="settings_replaygain_preamp">Pre amp</string>
    <string name="settings_replaygain_no_rg_amp">Attenuation (no RG)</string>
    <string name="settings_replaygain_boost">Boost</string>
    <string name="settings_replaygain_drc">Enable DRC</string>
    <string name="settings_replaygain_drc_desc">Use \"Dynamic Range Compression\" as clipping protection (recommended). If disabled, volume will be reduced instead (volume will not be at the same level, destroying normalization effect).</string>
    <string name="settings_replaygain_boost_desc" formatted="false">"\"Boost\" will output both ReplayGain and other music at a higher volume than what is set in your device. (If your device volume is set close to 100%, Boost will not increase the volume). With Boost, you can enjoy music that has similar loudness to other apps, such as games. Please note that this feature is experimental and may interfere with external equalizer apps. Boost does not work with Bluetooth headphones. In case of any volume-related issues, please disable Boost by setting it to 0 dB. "</string>
    <string name="settings_replaygain_no_rg_amp_desc">Reduce volume for loud songs that do not have ReplayGain tags</string>
    <string name="settings_replaygain_preamp_desc">Increase or decrease the volume of songs with ReplayGain tags. Higher values may cause loss of dynamics due to clipping prevention.</string>
    <string name="settings_replaygain_mode_desc">\"Smart\" automatically preserves album dynamics only when playing songs from an album consecutively.</string>
    <string name="settings_preference_category_folders_filesystem"><![CDATA[Folder & filesystem tabs]]></string>
    <string name="show_file_names">Show file names</string>
    <string name="show_file_names_summary">Show file names in the place of song names in the folder and filesystem tabs</string>
    <string name="settings_font_size">Font size</string>
    <string name="settings_mq_enabled">Multiple queues</string>
</resources>