<?xml version="1.0" encoding="utf-8"?><!--
  ~     Copyright (C) 2024 Akane Foundation
  ~
  ~     Gramophone is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Gramophone is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="lyric_bold"
        android:layout="@layout/preference_switch"
        android:summary="@string/settings_lyrics_bold_summary"
        android:title="@string/settings_lyrics_bold"
        android:widgetLayout="@layout/preference_switch_widget"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="lyric_center"
        android:layout="@layout/preference_switch"
        android:summary="@string/settings_lyrics_center_summary"
        android:title="@string/settings_lyrics_center"
        android:widgetLayout="@layout/preference_switch_widget"
        app:iconSpaceReserved="false" />

    <SeekBarPreference
        android:defaultValue="34"
        android:icon="@drawable/ic_font_size"
        android:key="lyric_text_size"
        android:layout="@layout/preference_seekbar"
        app:min="26"
        android:max="40"
        android:title="@string/settings_font_size"
        app:showSeekBarValue="true" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="status_bar_lyrics"
        android:layout="@layout/preference_switch"
        android:summary="@string/settings_status_bar_lyrics_summary"
        android:title="@string/settings_status_bar_lyrics_title"
        android:widgetLayout="@layout/preference_switch_widget"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="notification_lyrics"
        android:layout="@layout/preference_switch"
        android:summary="@string/settings_notification_lyrics_summary"
        android:title="@string/settings_notification_lyrics_title"
        android:widgetLayout="@layout/preference_switch_widget"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="trim_lyrics"
        android:layout="@layout/preference_switch"
        android:summary="@string/settings_trim_lyrics_summary"
        android:title="@string/settings_trim_lyrics"
        android:widgetLayout="@layout/preference_switch_widget"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="lyric_no_animation"
        android:layout="@layout/preference_switch"
        android:summary="@string/settings_lyrics_no_animation_summary"
        android:title="@string/settings_lyrics_no_animation"
        android:widgetLayout="@layout/preference_switch_widget"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="translation_auto_word"
        android:layout="@layout/preference_switch"
        android:summary="@string/settings_translation_auto_word_summary"
        android:title="@string/settings_translation_auto_word"
        android:widgetLayout="@layout/preference_switch_widget"
        app:iconSpaceReserved="false" />

</PreferenceScreen>