<?xml version="1.0" encoding="utf-8"?><!--
  ~     Copyright (C) 2024 Akane Foundation
  ~
  ~     Gramophone is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Gramophone is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout="@layout/preference_category_md"
        android:title="@string/settings_preference_category_application">

        <DropDownPreference
            android:defaultValue="0"
            android:entries="@array/theme_switch"
            android:entryValues="@array/theme_switch_val"
            android:key="theme_mode"
            android:layout="@layout/preference_dropdown_md"
            android:title="@string/settings_app_theme"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pureDark"
            android:layout="@layout/preference_switch"
            android:summary="@string/settings_pure_dark_summary"
            android:title="@string/settings_pure_dark"
            android:widgetLayout="@layout/preference_switch_widget"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_md"
        android:title="@string/settings_preference_category_home">

        <org.akanework.gramophone.ui.components.TabOrderPreference
            android:defaultValue=""
            android:key="tabs"
            android:layout="@layout/preference_basic"
            android:summary="@string/tab_order_summary"
            android:title="@string/tab_order"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_md"
        android:title="@string/settings_preference_category_folders_filesystem">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="show_file_names"
            android:layout="@layout/preference_switch"
            android:summary="@string/show_file_names_summary"
            android:title="@string/show_file_names"
            android:widgetLayout="@layout/preference_switch_widget"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

</PreferenceScreen>