<?xml version="1.0" encoding="utf-8"?><!--
  ~     Copyright (C) 2024 Akane Foundation
  ~
  ~     Gramophone is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Gramophone is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout="@layout/preference_category_md"
        android:title="@string/settings_category_misc">

        <Preference
            android:key="replaygain"
            android:layout="@layout/preference_basic"
            android:title="@string/settings_replaygain"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="rg_boost_gain_category"
        android:title="@string/settings_replaygain_boost"
        app:iconSpaceReserved="false">

        <DecibelSeekBarPreference
            android:defaultValue="0"
            android:icon="@drawable/outline_volume_up_24"
            android:key="rg_boost_gain"
            android:layout="@layout/preference_seekbar"
            android:max="15"
            android:title="@string/settings_replaygain_boost"
            app:showSeekBarValue="true" />

        <Preference
            android:icon="@drawable/ic_info"
            android:layout="@layout/preference_basic"
            android:summary="@string/settings_replaygain_boost_desc" />

    </PreferenceCategory>

</PreferenceScreen>