<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/decor_height">

    <TextView
        android:id="@+id/song_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:layout_marginStart="24dp"
        android:fontFamily="sans-serif"
        android:textColor="?attr/colorOnSurface"
        android:textSize="15sp"
        app:textFontWeight="600"
        tools:text="0 Song" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end|center_vertical"
        android:layout_marginEnd="9dp"
        android:gravity="center_vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_playlist"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/rp_buttons"
            android:contentDescription="@string/create_playlist"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:visibility="gone"
            app:icon="@drawable/outline_add_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="26dp"
            app:iconTint="?attr/colorPrimary"
            app:tooltipText="@string/create_playlist"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/play_all"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/rp_buttons"
            android:contentDescription="@string/play_all"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:visibility="gone"
            app:icon="@drawable/ic_play_arrow"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="26dp"
            app:iconTint="?attr/colorPrimary"
            app:tooltipText="@string/play_all"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/shuffle_all"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/rp_buttons"
            android:contentDescription="@string/shuffle_all"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:visibility="gone"
            app:icon="@drawable/ic_shuffle"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="22dp"
            app:iconTint="?attr/colorPrimary"
            app:tooltipText="@string/shuffle_all"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sort"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/rp_buttons"
            android:contentDescription="@string/sort"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/ic_sort"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="24dp"
            app:iconTint="?attr/colorPrimary"
            app:tooltipText="@string/sort" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/jumpUp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/rp_buttons"
            android:contentDescription="@string/scroll_to_albums"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:visibility="gone"
            app:icon="@drawable/baseline_arrow_upward_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="24dp"
            app:iconTint="?attr/colorPrimary"
            app:tooltipText="@string/scroll_to_albums"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/jumpDown"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/rp_buttons"
            android:contentDescription="@string/scroll_to_songs"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:visibility="gone"
            app:icon="@drawable/baseline_arrow_downward_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="24dp"
            app:iconTint="?attr/colorPrimary"
            app:tooltipText="@string/scroll_to_songs"
            tools:visibility="visible" />


    </LinearLayout>

</FrameLayout>